<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">parashotApp</string>
    <string name="mainpage">القسم</string>
    <string name="cancel">الغاء</string>
    <string name="open_permission">فتح</string>
    <string name="permission_text_cam">اعطاء الصلاحية لفتح الصور</string>
    <string name="notselect">لم يتم تحديد الصور</string>
    <string name="error">خطا في تحميل الصور</string>
    <string name="complet">ادخل حجم منتج صحيح</string>
    <string name="addcolortoproduct">اضافة الوان للمنتج</string>
    <string name="addsizesrtoproduct">اضاقة احجام للمنتج</string>
    <string name="code">الكود الخاص بالمشاهير : </string>
    <string name="banky">تحويل بنكي</string>
    <string name="card">بطاقة ائتمانية</string>
    <string name="orderdetails">تفاصيل الطلبات</string>
    <string name="deliveryname">اسم الكابتن : </string>
    <string name="deliveryoffers">عروض المناديب</string>
    <string name="deliveryoffers5">عروض المناديب</string>
    <string name="product_name">هاتف اونر 7 سي</string>
    <string name="satisfied">الي اي مدي انت راضي</string>
    <string name="writecomment">اكتب تعليقك</string>
    <string name="sendrate">ارســــل</string>
    <string name="prductrate">تقييم المنتج</string>
    <string name="storename">اسم المتجر</string>
    <string name="storeplace">مكان المتجر</string>
    <string name="clientname">اسم العميل</string>
    <string name="productname">اسم المنتج</string>
    <string name="productprice">سعر المنتج</string>
    <string name="paymentway">وسيلة الدفع</string>
    <string name="accept">قبول</string>
    <string name="refuse">رفض</string>
    <string name="neworder">طلب جديد</string>
    <!--<string name="google_maps_key">AIzaSyDFi45bBEn44Oh7dNIryAZ5FBvEnKPqrz0</string>-->

    <!--<string name="google_maps_key">AIzaSyDgd6gVwoQu1Ux4v04V3JhhWMqAyKqoRMo</string>-->
    <string name="google_maps_key">AIzaSyD8z2lWzm896P2g8VhaBfrVam0JL1BaiW0</string>
    <!--<string name="google_maps_key">AIzaSyDV2hlxxJVgTEPK_NNP3z1H7bALjY7_GL4</string>-->
    <string name="setting">الاعدادات</string>
    <string name="get_deliveryvalue">تحصيل قيمة التوصيل</string>
    <string name="enablecopon">تفعيل كوبونات التخفيض</string>
    <string name="discounttext">تفعيل التخفيضات</string>
    <string name="minorder">الحد الادني للطلب</string>
    <string name="taxpercentage">نسبة الضريبة</string>
    <string name="storedepart">قسم المتجر :</string>
    <string name="changestorename">تغيير اسم المتجر</string>
    <string name="copycode">تم نسخ الكود</string>
    <string name="changestoredepart">تغيير قسم المتجر</string>
    <string name="delivery_name">اسم المندوب : </string>
    <string name="product_name_in_chat">اسم المنتج : </string>
    <string name="mychat">محادثاتي</string>
    <string name="photographer"> المصور : </string>
    <string name="img_num">عدد الصور : </string>
    <string name="chat">مراسلة</string>
    <string name="photo_comments">تعليقات المصور</string>
    <string name="nearphotographer">المصورين الاقرب</string>
    <string name="photographerdetails">تفاصيل المصور</string>
    <string name="comment">تعليقات</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">جاري التحميل</string>
    <string name="erroroccur">حدث خطا,حاول مرة اخري </string>
    <string name="myorder">طلباتي</string>
    <string name="notcommplete">غير مكتملة</string>
    <string name="commplete">مكتملة</string>
    <string name="orderagain">طلب مرة اخري</string>
    <string name="addsuccess">تمت الاضافة للسلة  بنجاح</string>
    <string name="are_you_accept">هل انت موافق علي اتمام عملية الشراء ؟!</string>
    <string name="ok">موافق</string>
    <string name="totalbill">الاجمالي</string>
    <string name="noitem">لا يوجد منتجات بالسلة</string>
    <string name="aleadyfound">المنتج موجود في السلة من قبل</string>
    <string name="youhave">لديك الان</string>
    <string name="productincart">منتجات بالسلة</string>
    <string name="favorit">المفضلة</string>
    <string name="deals">الصفقات</string>
    <string name="notification">التنبيهات</string>
    <string name="categry">الفئات الرئيسة</string>
    <string name="sub_categry">الفئات الفرعية</string>
    <string name="stores">المتاجر</string>
    <string name="products">المنتجات</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="paymenpage">صفحة الدفع</string>
    <string name="finish_order">انهاء الطلب</string>
    <string name="cart">سلة المنتجات</string>
    <string name="male"><font size="16">ذكر</font></string>
    <string name="female"><font size="16">أنثى</font></string>
    <string name="register">تسجيل</string>
    <string name="username"><font size="16">اسم المستخدم</font></string>
    <string name="register_in_login">التسجيل</string>
    <string name="forgetpassword">نسيت كلمة المرور؟</string>
    <string name="registerfb">continue with facebook</string>
    <string name="password"><font size="16"> كلمة المرور</font></string>
    <string name="birthdate"><font size="16">تاريخ الميلاد</font></string>
    <string name="phone"><font size="16">رقم الهاتف</font></string>
    <string name="registertitle">التسجيل</string>
    <string name="commpletefileds">الرجاء اكمال البيانات</string>
    <string name="usernamevalidate">اسم المستخدم يجب ان يحتوي علي حروف ثم ارقام</string>
    <string name="logintitle">تسجيل دخول</string>
    <string name="aleadytoken">اسم المستخدم محجوز من قبل</string>
    <string name="registersuccess">تم التسجيل بنجاح</string>
    <string name="usererror">اسم المستخدم او كلمة المرور غير صحيحة</string>
    <string name="login">دخول</string>
    <string name="loginsuccess">تم تسجيل الدخول بنجاح</string>
    <string name="addtocart">أضف للسلة</string>
    <string name="description">الوصف</string>
    <string name="product_description">مواصفات المنتج :</string>
    <string name="choice_color">اختر لون المنتج</string>
    <string name="marka_name">اسم الماركة</string>
    <string name="store_name">اسم المتجر</string>
    <string name="storge">سعة التخزين</string>
    <string name="comments">تعليقات</string>
    <string name="facebook_app_id">455625514963624</string>
    <string name="fb_login_protocol_scheme">fb455625514963624</string>
    <string name="makeorder">اضافة طلب</string>
    <string name="writeorderdetails">اكتب تفاصيل طلبك هنا </string>
    <string name="findlocation">ايجاد موقع المستخدم</string>
    <string name="cannot_fetch_address">غير قادر علي ايجاد العنوان</string>
    <string name="send">تم</string>
    <string name="details_adress">رقم البيت/العمارة/الشقة</string>
    <string name="map">خريطة</string>
    <string name="hagin">هجين</string>
    <string name="Satellite">قمر صناعي</string>
    <string name="search">بحث</string>
    <string name="noaddress">لم يتم اختيار العنوان بعد</string>

    <string name="nodelivery">لم يحدد بعد</string>
    <string name="nodescription">اكتب وصف الطلب</string>
    <string name="fragment_offers">عروض و صفقات</string>
    <string name="loginfirst">يجب تسجيل الدخول اولا</string>
    <string name="ordernotfound">لا يوجد طلبات</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="arabic">العربية</string>
    <string name="eng">الانجليزية</string>
    <string name="lang">اللغة</string>
    <string name="settings">الاعدادات</string>
    <string name="nav_header_desc">الصورة الشخصية</string>
    <string name="nav_header_title">ALI HUSSAM</string>
    <string name="charge">شحن مجاني </string>
    <string name="detect_place">حدد مكان التوصيل</string>
    <string name="already_arabic">انت بالفعل تستخدم اللغة العربية</string>
    <string name="already_eng">You are already using english language</string>
    <string name="arabic_change">تم تغيير اللغة إلى اللغة العربية</string>
    <string name="eng_change">Language has been changed to english</string>
    <string name="unit">كم</string>
    <string name="costunit">  ر.س  </string>
    <string name="rateproduct">تقييم المنتج</string>
    <string name="delivery_viewa">متابعة المندوب</string>
    <string name="deliverycomments">تعليقات المندوب</string>
    <string name="delivery_offers">عروض المناديب</string>
    <string name="deliverychoice">تم اختيار المندوب</string>
    <string name="favproducts">المنتجات المفضلة</string>
    <string name="addtofavsucces">تم الاضافة الي المفضلة</string>
    <string name="ratedelivery">تقييم المندوب</string>
    <string name="deliveryrate">تقييم المندوب</string>
    <string name="deletefromfavsucces">تم الحذف من المفضلة</string>
    <string name="nofavfound">لا يوجد منتجات مفضلة لديك</string>
    <string name="addratesuccess">تم اضافة تقييمك بنجاح</string>
    <string name="depart">قسم</string>
    <string name="al">ال</string>
    <string name="connected">متصل</string>
    <string name="chating">الدردشة</string>
    <string name="maping">الخريطة</string>
    <string name="gotostore">باتجاه المتجر</string>
    <string name="gotoclient">باتجاه العميل</string>

    <string name="client_id" translatable="false">b3f026651e7c4e58b976da0dd48d221d</string>
    <string name="callback_url" translatable="false">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="registerinsta">instagram</string>
    <string name="redirect_url" translatable="false">https://www.instagram.com</string>
    <string name="get_user_info_url">
https://api.instagram.com/v1/users/self/?access_token=
</string>
    <string name="offernotfound">لا يوجد عروض لطلبك</string>
    <string name="orderfromgoogle">طلبك من متاجر جوجل ولا يوجد منتجات بداخله</string>
    <string name="waiting">انتظر ...</string>
    <string name="waitstart">بانتظار بدء الرحلة</string>
    <string name="waitdelivery">بانتظار اختيار المندوب</string>
    <string name="underwaiting">في الانتظار</string>
    <string name="waitdeliverystart">بانتظار المندوب</string>
    <string name="gotoyou">في الطريق اليك</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="are_you_sure">هل متاكد من وصول المنتج</string>
    <string name="delivery">المندوب</string>
    <string name="stor">المتجر</string>
    <string name="deliverynotready">المندوب لم يبدا الرحلة اليك</string>
    <string name="orderdelivery">متابعة المندوب</string>
    <string name="offers">عروض</string>
    <string name="dealss">صفقات</string>
    <string name="nocomments">لا يوجد تعليقات لهذا المندوب</string>
</resources>