<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--<android.support.constraint.Guideline-->
        <!--android:id="@+id/guid1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.03"-->
        <!--/>-->

    <!--<android.support.constraint.Guideline-->
        <!--android:id="@+id/guid2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.26"-->
        <!--/>-->

    <!--<android.support.constraint.Guideline-->
        <!--android:id="@+id/guid3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.43"-->
        <!--/>-->
    <!--<android.support.constraint.Guideline-->
        <!--android:id="@+id/guid4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.57"-->
        <!--/>-->

    <!--<android.support.constraint.Guideline-->
        <!--android:id="@+id/guid5"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.71"-->
        <!--/>-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHeight_percent="0.25"
        android:src="@drawable/logo_in_register"
        app:layout_constraintWidth_percent="0.9"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:gravity="center"
        android:textColorHint="@color/gray"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintWidth_percent="0.9" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.004"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/birthdate"
        android:gravity="center"
        android:textColorHint="@color/gray"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintWidth_percent="0.9" />



    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/phone"
        android:gravity="center"
        android:inputType="number"
        android:textColorHint="@color/gray"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate"
        app:layout_constraintWidth_percent="0.9" />


    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register_action"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintWidth_percent="0.7"/>


    <TextView
        android:id="@+id/loginwithface"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_registerwithfb_action"
        android:gravity="center"
        android:text="@string/registerfb"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintWidth_percent="0.9" />

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/back_home3"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>



</android.support.constraint.ConstraintLayout>

</ScrollView>