<?xml version="1.0" encoding="utf-8"?>



<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintHeight_percent="0.20"
        android:src="@drawable/logo_in_register"
        app:layout_constraintWidth_percent="0.8"
        />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/username"
        android:gravity="center"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintWidth_percent="0.85" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintWidth_percent="0.85" />


    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_background_register_action"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintWidth_percent="0.7"/>


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@+id/login"
        >

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/register_in_login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.8"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/forgetpassword"
            />

    </LinearLayout>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.7"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/layout"
       />



    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/back_home3"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
