<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_home3">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<include-->
            <!--android:id="@+id/header"-->
            <!--layout="@layout/header_for_product_rate"/>-->


        <ImageView
            android:id="@+id/item_rateimg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/rate_productname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_rateimg"
            android:textColor="@color/black"
            android:text="@string/product_name"
            android:textSize="16dp"/>


        <TextView
            android:id="@+id/rate_ordernum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_productname"
            android:textColor="@color/gray"
            android:text="طلب رقم : 155 "
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/ratetxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_ordernum"
            android:text="@string/satisfied"
            android:textSize="15dp" />

        <RatingBar
            android:id="@+id/ratebare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rating="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratetxt"
            android:theme="@style/RatingBar"
            android:numStars="5"/>


        <EditText
            android:id="@+id/ratecomment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minLines="2"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratebare"
            android:gravity="center"
            android:hint="@string/writecomment"/>

        <TextView
            android:id="@+id/ratesend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratecomment"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sendrate"
            android:textSize="20dp"
            android:layout_margin="15dp"
            android:onClick="sendfedback"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/btn_borderrate"/>

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
