<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/relative_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/back_white"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="right">

            <ImageView
                android:id="@+id/close_dialog"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cancel" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:text="@string/permission_text_cam"/>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:minWidth="80dp"
                android:layout_gravity="center"
                android:background="@drawable/login_b"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:minWidth="80dp"
                android:layout_gravity="center"
                android:background="@drawable/login_b"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/open_permission"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>